
  * Changed the solution display for the `richtext` question type.

  * `util.read_user_file` now does not raise an exception if there is an error
    in a user's file.  Rather, it always returns a dictionary, but includes
    error information in the case of an error.

  * Logs are now stored in a binary format in order to improve the efficiency
    of reading/writing log entries.

DEPRECATED:

REMOVED:

  * Removed several deprecated features:

      * `__MEDIA__` can no longer be used as a name for directories containing
        static files.  `__STATIC__` should be used instead.

      * `csm_tools` no longer points to utility functions from third-party
        libraries.  Use `csm_thirdparty` instead.

      * `cs_print` has been removed.  Use `print` instead.

      * `csq_multiplechoice_renderer` and `csq_multiplechoice_soln_mode`
        variables for multieplchoice questions have been renamed to
        `csq_renderer` and `csq_soln_mode`, respectively.

      * `cs_score_message` has been removed as a special variable.  Use
        `csq_score_message` instead.

      * `loader.spoof_early_load` has been renamed to
        `loader.generate_context`.

  * Removed `circuit` question type, which has not been used by anyone for a
    long time and may no longer work with catsoop updates.

FIXED:

  * `loader.generate_context` no longer breaks when given an empty path.

  * Reverted changes to `language` module from version 14.x.x.

  * Scores and messages are now logged in problemactions for questions in
    legacy grading mode (checker IDs are still logged for questions using the
    asynchronous checker)

  * Fixed an issue whereby "set()" could not be accepted as an answer to a
    `pythonic` or `pythonliteral` question.

  * Fix for malformed HTML in `multiexpression` question output.

  * Fix for "preview" in `richtext` question type.

  * Fixed an issue related to complex numbers in the `expression` question
    type.
